# safetywrap

./: .pylintrc  pyproject.toml  setup.py
bench/: sample.py
src/safetywrap/: _impl.py  _interface.py
tests/: test_meta.py  test_option.py  test_result.py
